[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm[toml] >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-web"
description = "Web framework integrations for the Asphalt framework"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Web Environment",
    "Framework :: AnyIO",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "asphalt @ git+https://github.com/asphalt-framework/asphalt",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://asphalt-web.readthedocs.org/en/latest/"
"Source code" = "https://github.com/asphalt-framework/asphalt-web"
"Issue tracker" = "https://github.com/asphalt-framework/asphalt-web/issues"
"Help and support" = "https://github.com/asphalt-framework/asphalt/wiki/Help-and-support"

[project.optional-dependencies]
aiohttp = [
    "aiohttp >= 3.8"
]
asgi3 = [
    "asgiref ~= 3.5",
    "hypercorn >= 0.16.0",
]
django = [
    "asgiref ~= 3.5",
    "Django >= 3.2",
    "hypercorn >= 0.16.0",
]
fastapi = [
    "asgiref ~= 3.5",
    "fastapi >= 0.75",
    "hypercorn >= 0.16.0",
]
litestar = [
    "asgiref ~= 3.5",
    "litestar >= 2.5.5",
    "hypercorn >= 0.16.0",
]
starlette = [
    "asgiref ~= 3.5",
    "starlette >= 0.17",
    "hypercorn >= 0.16.0",
]
test = [
    "anyio[trio] >= 4.2",
    "asphalt-web[asgi3,fastapi,starlette]",
    "coverage >= 7",
    "httpx",
    "httpx-ws",
    "aiohttp >= 3.8",
    "Django >= 3.2; python_implementation == 'CPython'",
    "litestar >= 2.5.5; python_implementation == 'CPython'",
    "pytest >= 7.4",
    "websockets >= 14.1",
]
doc = [
    "Sphinx >= 7.0",
    "sphinx_rtd_theme >= 1.3.0",
    "sphinx-autodoc-typehints >= 1.22",
    "sphinx-tabs >= 3.3.1",
    "asphalt-web[aiohttp,asgi3,django,fastapi,litestar,starlette]",
]

[project.entry-points."asphalt.components"]
aiohttp = "asphalt.web.aiohttp:AIOHTTPComponent"
asgi3 = "asphalt.web.asgi3:ASGIComponent"
django = "asphalt.web.django:DjangoComponent"
fastapi = "asphalt.web.fastapi:FastAPIComponent"
litestar = "asphalt.web.litestar:LitestarComponent"
starlette = "asphalt.web.starlette:StarletteComponent"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = ["-rsfE", "--tb=short"]
testpaths = ["tests"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
    "ASYNC",        # flake8-async
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF",          # Ruff-specific rules
    "UP",           # pyupgrade
    "W",            # pycodestyle warnings
]
ignore = [
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["asphalt.web"]
known-third-party = ["asphalt.core"]

[tool.mypy]
python_version = "3.9"

[tool.coverage.run]
source = ["asphalt.web"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py313", "pypy3"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
commands = [["python", "-m", "pytest", { replace = "posargs", extend = true }]]
package = "editable"
extras = ["test"]

[tool.tox.env.pyright]
deps = ["pyright"]
commands = [["pyright", "--verifytypes", "asphalt.exceptions"]]

[tool.tox.env.docs]
commands = [["sphinx-build", "-W", "-n", "docs", "build/sphinx", { replace = "posargs", extend = true }]]
extras = ["doc"]
